add an id for submit and change the container to fluid

--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <link href="css/styles.css" rel="stylesheet" type="text/css">
   </head>
   <body>
-    <div class="container">
+    <div class="container-fluid">
       <div class="jumbotron">
         <h2>Ping-Pong</h2>
       </div>
@@ -34,8 +34,8 @@
             </ol>
             <form>
               <label>Enter your number here:</label>
-              <input type="text">
-              <button class="btn btn-default">Ping Pong!</button>
+              <input type="text" id="userInput">
+              <button id="submit" class="btn btn-default">Ping Pong!</button>
             </form>
             <ul id="populateUL">
               <!-- Results will show here using JQuery -->
