--- a/index.html
+++ b/index.html
@@ -15,13 +15,15 @@
       <div class="well">
         <div class="row">
           <div class="col-md-3">
-            <h3>About Ping Pong</h3>
-            <h4>Created By:</h4>
-            <p>Ryan Jones</p>
-            <h4>Github Username/URL:</h4>
-            <p><a href="https://github.com/znergy">Github</a></p>
-            <h4>Level 2 Test for:</h4>
-            <p>Java</p>
+            <div class="side1">
+              <h3>About Ping Pong</h3>
+              <h4>Created By:</h4>
+              <p>Ryan Jones</p>
+              <h4>Github Username/URL:</h4>
+              <p><a href="https://github.com/znergy">Github</a></p>
+              <h4>Level 2 Test for:</h4>
+              <p>Java</p>
+            </div>
           </div>
           <div class="col-md-9">
             <h2>Lets Play!</h2>
