add styles to both side1 and side2

--- a/index.html
+++ b/index.html
@@ -26,23 +26,25 @@
             </div>
           </div>
           <div class="col-md-9">
-            <h2>Lets Play!</h2>
-            <h3>Rules:</h3>
-            <p>Ping Pong will count up to your number from 1 with the following exceptions:</p>
-            <ol>
-              <li>Numbers Divisible by 3 become "ping"</li>
-              <li>Numbers Divisible by 5 become "pong"</li>
-              <li>Numbers Divisible by 15 become "Ping-Pong"</li>
-            </ol>
-            <form>
-              <label>Enter your number here:</label>
-              <input type="text" id="userInput">
-              <button id="submit" class="btn btn-default">Ping Pong!</button>
-            </form>
-            <ul id="populateUL">
-              <!-- Results will show here using JQuery -->
-            
-            </ul>
+            <div class="side2">
+              <h2>Lets Play!</h2>
+              <h3>Rules:</h3>
+              <p>Ping Pong will count up to your number from 1 with the following exceptions:</p>
+              <ol>
+                <li>Numbers Divisible by 3 become "ping"</li>
+                <li>Numbers Divisible by 5 become "pong"</li>
+                <li>Numbers Divisible by 15 become "Ping-Pong"</li>
+              </ol>
+              <form>
+                <label>Enter your number here:</label>
+                <input type="text" id="userInput">
+                <button id="submit" class="btn btn-default">Ping Pong!</button>
+              </form>
+              <ul id="populateUL">
+                <!-- Results will show here using JQuery -->
+
+              </ul>
+            </div>
           </div>
         </div>
       </div>
