add social media buttons

--- a/index.html
+++ b/index.html
@@ -4,6 +4,10 @@
     <title>Ping-Pong</title>
     <!-- Bootstrap -->
     <link href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous">
+    <!-- Font Awesome Icons -->
+    <link rel="stylesheet" href="css/font-awesome.min.css">
+    <!-- Lobster/ font -->
+    <link href="https://fonts.googleapis.com/css?family=Lobster|Montserrat" rel="stylesheet">
     <!-- Custom CSS -->
     <link href="css/styles.css" rel="stylesheet" type="text/css">
   </head>
@@ -23,6 +27,24 @@
               <p><a href="https://github.com/znergy">Github</a></p>
               <h4>Level 2 Test for:</h4>
               <p>Java</p>
+              <div class="social">
+                <!-- Font Awesome Icons for GitHub, etc. -->
+              <a class="btn btn-default" href="https://github.com/Znergy">
+                <i class="fa fa-github fa-2x" aria-hidden="true" title="GitHub"></i>
+              </a>
+              <a class="btn btn-primary" href="https://www.linkedin.com/in/ryan-jones-5996948b">
+                <i class="fa fa-linkedin fa-2x" aria-hidden="true" title="LinkedIn"></i>
+              </a>
+              <a class="btn btn-danger" href="https://www.codecademy.com/znergy">
+                <i class="fa fa-code fa-2x" aria-hidden="true" title="Codecademy"></i>
+              </a>
+              <a class="btn btn-info" href="https://twitter.com/ryanjonesirl">
+                <i class="fa fa-twitter fa-2x" aria-hidden="true" title="Twitter"></i>
+              </a>
+              <a class="btn btn-success" href="http://znergy.net">
+                <i class="fa fa-rss fa-2x" aria-hidden="true" title="Blog"></i>
+              </a>
+              </div>
             </div>
           </div>
           <div class="col-md-9">
