add padding and center social media buttons.

--- a/index.html
+++ b/index.html
@@ -23,12 +23,13 @@
               <h3>About Ping Pong</h3>
               <h4>Created By:</h4>
               <p>Ryan Jones</p>
-              <h4>Github Username/URL:</h4>
-              <p><a href="https://github.com/znergy">Github</a></p>
+              <h4>Objective:</h4>
+              <p>Create a web application that takes a users input, does some javascript/jquery magic then spits out the appropriate results.</p>
               <h4>Level 2 Test for:</h4>
               <p>Java</p>
-              <div class="social">
-                <!-- Font Awesome Icons for GitHub, etc. -->
+            </div>
+            <div class="social">
+              <!-- Font Awesome Icons for GitHub, etc. -->
               <a class="btn btn-default" href="https://github.com/Znergy">
                 <i class="fa fa-github fa-2x" aria-hidden="true" title="GitHub"></i>
               </a>
@@ -44,7 +45,6 @@
               <a class="btn btn-success" href="http://znergy.net">
                 <i class="fa fa-rss fa-2x" aria-hidden="true" title="Blog"></i>
               </a>
-              </div>
             </div>
           </div>
           <div class="col-md-9">
