--- a/index.html
+++ b/index.html
@@ -1,20 +1,32 @@
+<!-- Application: Ping-Pong -->
+<!-- File Name: index.html -->
+<!-- Programmer: Ryan Jones -->
+<!-- Version: 02/24/2017 -->
+
 <!DOCTYPE html>
 <html>
   <head>
     <title>Ping-Pong</title>
     <link rel="icon" type="image/png" href="favicon.ico" />
+    <!-- Meta Tags -->
+    <meta charset="UTF-8">
+    <meta name="description" content="Web Application">
+    <meta name="keywords" content="HTML,CSS,JQuery,JavaScript, ping pong">
+    <meta name="author" content="Ryan Jones">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <!-- Bootstrap -->
     <link href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous">
     <!-- Font Awesome Icons -->
     <link rel="stylesheet" href="css/font-awesome.min.css">
-    <!-- Lobster/ font -->
-    <link href="https://fonts.googleapis.com/css?family=Lobster|Montserrat" rel="stylesheet">
+    <!-- Lato/Roboto/Sansita font -->
+    <link href="https://fonts.googleapis.com/css?family=Lato|Roboto|Sansita" rel="stylesheet">
     <!-- Custom CSS -->
     <link href="css/styles.css" rel="stylesheet" type="text/css">
   </head>
   <body>
     <div class="container-fluid">
       <div class="jumbotron">
+        <img class="img-responsive logo" src="img/logo.png" alt="logo"/>
         <h1>Ping-Pong</h1>
       </div>
       <div class="well">
@@ -22,12 +34,13 @@
           <div class="col-md-3">
             <div class="side1">
               <h3>About Ping Pong</h3>
+              <hr class="aboutHr" />
               <h4>Created By:</h4>
               <p>Ryan Jones</p>
               <h4>Objective:</h4>
               <p>Create a web application that takes a users input, does some javascript/jquery magic then spits out the appropriate results.</p>
-              <h4>Level 2 Test for:</h4>
-              <p>Java</p>
+              <h4>Technologies Used:</h4>
+              <p><span class="yellow shadow">JavaScript</span> - <span class="dark-blue shadow">JQuery</span> - <span class="orange shadow">HTML</span>/<span class="light-blue shadow">CSS</span></p>
             </div>
             <div class="social">
               <!-- Font Awesome Icons for GitHub, etc. -->
@@ -51,16 +64,17 @@
           <div class="col-md-9">
             <div class="side2">
               <h2>Lets Play!</h2>
+              <hr class="playHr" />
               <h3>Rules:</h3>
               <p>Ping Pong will count up to your number from 1 with the following exceptions:</p>
               <ol>
-                <li>Numbers Divisible by 3 become "ping"</li>
-                <li>Numbers Divisible by 5 become "pong"</li>
-                <li>Numbers Divisible by 15 become "Ping-Pong"</li>
+                <li>Numbers divisible by 3 become "ping"</li>
+                <li>Numbers divisible by 5 become "pong"</li>
+                <li>Numbers divisible by 15 become "Ping-Pong"</li>
               </ol>
               <form>
                 <label>Enter your number here:</label>
-                <input type="text" id="userInput">
+                <input type="text" id="userInput" placeholder="1..2..3..etc">
                 <button id="submit" class="btn btn-default">Ping Pong!</button>
               </form>
               <ul id="populateUL">
