fix padding issues, make the site fully mobile responsive

--- a/index.html
+++ b/index.html
@@ -42,24 +42,6 @@
               <h4>Technologies Used:</h4>
               <p><span class="yellow shadow">JavaScript</span> - <span class="dark-blue shadow">JQuery</span> - <span class="orange shadow">HTML</span>/<span class="light-blue shadow">CSS</span></p>
             </div>
-            <div class="social">
-              <!-- Font Awesome Icons for GitHub, etc. -->
-              <a class="btn btn-default" href="https://github.com/Znergy">
-                <i class="fa fa-github fa-2x" aria-hidden="true" title="GitHub"></i>
-              </a>
-              <a class="btn btn-primary" href="https://www.linkedin.com/in/ryan-jones-5996948b">
-                <i class="fa fa-linkedin fa-2x" aria-hidden="true" title="LinkedIn"></i>
-              </a>
-              <a class="btn btn-danger" href="https://www.codecademy.com/znergy">
-                <i class="fa fa-code fa-2x" aria-hidden="true" title="Codecademy"></i>
-              </a>
-              <a class="btn btn-info" href="https://twitter.com/ryanjonesirl">
-                <i class="fa fa-twitter fa-2x" aria-hidden="true" title="Twitter"></i>
-              </a>
-              <a class="btn btn-success" href="http://znergy.net">
-                <i class="fa fa-rss fa-2x" aria-hidden="true" title="Blog"></i>
-              </a>
-            </div>
           </div>
           <div class="col-md-9">
             <div class="side2">
@@ -79,10 +61,43 @@
               </form>
               <ul id="populateUL">
                 <!-- Results will show here using JQuery -->
-
               </ul>
             </div>
           </div>
+        </div>
+      </div>
+      <div class="bg-black">
+        <div class="container">
+          <div class="footer">
+            <div class="row">
+              <div class="col-md-6">
+                <footer>Made by Ryan Jones. Copyright © 2017 Ryan Jones</footer>
+                <footer>All Rights Reserved</footer>
+              </div>
+              <!-- End of Copyright -->
+              <div class="col-md-6">
+                <!-- Font Awesome Icons for GitHub, etc. -->
+                <a class="btn btn-default" href="https://github.com/Znergy">
+                  <i class="fa fa-github fa-2x" aria-hidden="true" title="GitHub"></i>
+                </a>
+                <a class="btn btn-primary" href="https://www.linkedin.com/in/ryan-jones-5996948b">
+                  <i class="fa fa-linkedin fa-2x" aria-hidden="true" title="LinkedIn"></i>
+                </a>
+                <a class="btn btn-danger" href="https://www.codecademy.com/znergy">
+                  <i class="fa fa-code fa-2x" aria-hidden="true" title="Codecademy"></i>
+                </a>
+                <a class="btn btn-info" href="https://twitter.com/ryanjonesirl">
+                  <i class="fa fa-twitter fa-2x" aria-hidden="true" title="Twitter"></i>
+                </a>
+                <a class="btn btn-success" href="http://znergy.net">
+                  <i class="fa fa-rss fa-2x" aria-hidden="true" title="Blog"></i>
+                </a>
+              </div>
+              <!-- End of col-md-4 -->
+            </div>
+            <!-- End of Row -->
+          </div>
+          <!-- End of Footer -->
         </div>
       </div>
     </div>
